# Redis-HA-Tool

./: .gitignore  Cargo.toml  README.md  build.rs
bugs/: 1.md
config/: config.json
docker/: Dockerfile  docker-compose.yml
docs/: build.md  usage.md  同步原理.md
docs_dev/: DESIGN.md  TODO.md  dev_plan.md  test_phase1.md  场景测试用例.md
proto/: api.proto
scripts/: create_release_package.sh  start.sh  status.sh  stop.sh
src/: error.rs  lib.rs  main.rs
src/checkpoint/: manager.rs  mod.rs
src/cluster/: mod.rs  redis_election.rs
src/cmd/: api.rs  mod.rs  syncer_cmd.rs
src/config/: constants.rs  mod.rs
src/filter/: key_filter.rs  mod.rs  range_list.rs  trie.rs
src/metric/: collector.rs  mod.rs
src/protocol/: mod.rs
src/protocol/rdb/: crc64.rs  dump.rs  mod.rs  parser.rs  types.rs
src/protocol/resp/: decoder.rs  encoder.rs  mod.rs  value.rs
src/store/: dataset.rs  mod.rs  reader.rs  storer.rs  writer.rs
src/syncer/: channel.rs  input.rs  mod.rs  output.rs  state_machine.rs  syncer.rs  transaction.rs
src/utils/: hash.rs  log.rs  mod.rs
tests/: test_election.rs  test_filter.rs  test_filter_integration.rs  test_full_sync.rs  test_http_api.rs  test_incr_sync.rs  test_resume.rs  test_store.rs
